--- a/crawl_images.ipynb
+++ b/crawl_images.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -41,21 +41,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "1656"
-      ]
-     },
-     "execution_count": 71,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "./images/film Robin Williams (1991)/225044.jpg\n",
+      "./images/film Robin Williams (1991)/225044.jpg\n",
+      "./images/film Robin Williams (1991)/225044.jpg\n",
+      "1653\n",
+      "1656\n"
+     ]
     }
    ],
    "source": [
+    "import os\n",
     "import os.path\n",
     "count = 0\n",
     "bis = 0\n",
@@ -64,16 +66,31 @@
     "for i in range(len(data)):\n",
     "    name = data[\"Title\"].iloc[i]\n",
     "    \n",
+    "    import os\n",
+    "    \n",
     "    name = name.replace(\",\", \"\").replace(\":\", \"\").replace(\"?\", \"\").replace(\"/\", \" \")\n",
     "      \n",
     "    name = \"film \" + name + \" (\" + str(data[\"Year\"].iloc[i]) + \")\"\n",
     "    \n",
     "    test.append(name)\n",
     "    \n",
-    "    path = \"./downloads/\" + name\n",
+    "    path = \"./images/\" + name\n",
     "    \n",
-    "    if os.path.isdir(path):\n",
+    "    #if os.path.isdir(path):\n",
+    "        #count += 1\n",
+    "        \n",
+    "    #os.rename('a.txt', 'b.kml')\n",
+    "    #print(os.listdir())\n",
+    "    #if len(os.listdir(path)) > 0:\n",
+    "    \n",
+    "    if os.path.isfile(path+\"/image.png\"):\n",
+    "    #file = path+\"/\"+os.listdir(path)[0]\n",
+    "        \n",
+    "     #   os.rename(file, path+\"/image.png\")\n",
     "        count += 1\n",
+    "    else:\n",
+    "        print(file)\n",
+    "    #print(file)\n",
     "    \n",
     "    bis += 1\n",
     "\n",
@@ -93,7 +110,8 @@
     "    # print list \n",
     "    return unique_list\n",
     "        \n",
-    "len(data)"
+    "print(count)\n",
+    "print(bis)"
    ]
   },
   {
