--- a/pre_proccessing.ipynb
+++ b/pre_proccessing.ipynb
@@ -104,20 +104,6 @@
       "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
       "  self._setitem_with_indexer(indexer, value)\n"
      ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Ciao Italia, Madonna Live from Italy\n",
-      "Madonna, Truth or Dare\n",
-      "The Immaculate Collection\n",
-      "The Madonna Live Virgin Tour\n",
-      "Madonna, Justify My Love\n",
-      "Madonna, Like a Virgin\n",
-      "Ninja, the Violent Sorcerer\n",
-      "Erasure, Live Wild!\n"
-     ]
     }
    ],
    "source": [
@@ -125,20 +111,31 @@
     "data = pd.read_csv('test1.csv')\n",
     "\n",
     "for i in range(len(data)):\n",
-    "    \n",
     "    if pd.isnull(data[\"Popularity\"].iloc[i]):\n",
     "        data[\"Popularity\"].iloc[i] = 50\n",
     "        \n",
-    "for i in range(len(data)):\n",
-    "    \n",
     "    if pd.isnull(data[\"Subject\"].iloc[i]):\n",
     "        data[\"Subject\"].iloc[i] = \"Unknown\"\n",
-    "        \n",
-    "for i in range(len(data)):\n",
     "    \n",
     "    if pd.isnull(data[\"Actor\"].iloc[i]):\n",
     "        data[\"Actor\"].iloc[i] = \"Unknown\"\n",
-    "        print(data[\"Title\"].iloc[i])\n",
+    "        \n",
+    "    if pd.isnull(data[\"Year\"].iloc[i]):\n",
+    "        data[\"Year\"].iloc[i] = \"Unknown\"\n",
+    "        \n",
+    "    if pd.isnull(data[\"Length\"].iloc[i]):\n",
+    "        data[\"Length\"].iloc[i] = 120.0\n",
+    "        \n",
+    "    if pd.isnull(data[\"Actress\"].iloc[i]):\n",
+    "        data[\"Actress\"].iloc[i] = \"Unknown\"\n",
+    "        \n",
+    "    if pd.isnull(data[\"Director\"].iloc[i]):\n",
+    "        data[\"Director\"].iloc[i] = \"Unknown\"\n",
+    "        \n",
+    "    if pd.isnull(data[\"Awards\"].iloc[i]):\n",
+    "        data[\"Awards\"].iloc[i] = \"No\"\n",
+    "        \n",
+    "    \n",
     "        \n",
     "data.to_csv('film_cleaned.csv')"
    ]
